style.css
/* ... */
.menu .card .caption {
  font-family: "Montserrat", sans-serif;
  font-size: 16px;
  color: #3d2514;
  margin: 20px 0;
}
.menu .card button {
  background: #df1b1c;
  border: none;
  font-family: "Alfa Slab One", cursive;
  font-size: 18px;
  text-transform: uppercase;
  color: white;
  width: 200px;
  padding: 15px;
}

/* Responsive Menu section */

@media screen and (max-width: 700px) {
  .menu .wrapper h2 {
    font-size: 35px;
  }
  .menu .wrapper p {
    font-size: 14px;
  }
  .menu .products {
    flex-direction: column;
    align-items: center;
  }
  .menu .card {
    width: 80%;
    margin-bottom: 20px;
  }
}

/*⛔⛔ End Menu Section ⛔⛔*/

/* 
🌳🌳 Start Slider  🌳🌳 
*/
.slider {
  margin: 30px 0;
  height: 530px;
}

.slider .swiper-container {
  width: 94%;
  margin: 0 auto !important;
  box-shadow: 19px 11px 30px 6px rgba(50, 50, 50, 0.4);
}
.slider {
  margin: 100px 0;
}
.slider .swiper-slide {
  height: 455px;
}
.slider .content {
  display: flex;
  justify-content: space-between;
  padding: 20px;
  height: 500px;
}
.slider .content .caption {
  width: 50%;
  padding: 10px;
}
.slider .caption h2 {
  color: #3d2514;
  font-family: "Alfa Slab One", cursive;
  font-size: 40px;
  text-transform: uppercase;
  margin-bottom: 20px;
}
.slider .caption p {
  font-family: "Montserrat", sans-serif;
  line-height: 40px;
}
.slider .caption h2 span {
  display: block;
  color: #252424;
  font-family: "Bebas Neue", cursive;
  font-size: 25px;
  text-transform: uppercase;
  letter-spacing: 5px;
}
.slider .content .img {
  width: 50%;
}
.slider .content .img img {
  width: 100%;
}

/* pagination */

.swiper-container-horizontal > .swiper-pagination-bullets,
.swiper-pagination-custom,
.swiper-pagination-fraction {
  bottom: 50px;
  left: -500px;
}

.swiper-pagination-bullet-active {
  opacity: 1;
  background: orange;
}

.swiper-pagination-bullet {
  width: 17px;
  height: 17px;
}

/* Responsive Slider */

@media screen and (max-width: 1180px) {
  .swiper-container-horizontal > .swiper-pagination-bullets,
  .swiper-pagination-custom,
  .swiper-pagination-fraction {
    left: -390px;
  }

  .slider .caption p {
    font-size: 18px;
    line-height: 30px;
  }

  .slider .caption h2 {
    font-size: 30px;
  }
}
@media screen and (max-width: 970px) {
  .swiper-container-horizontal > .swiper-pagination-bullets,
  .swiper-pagination-custom,
  .swiper-pagination-fraction {
    left: auto;
  }
}
@media screen and (max-width: 700px) {
  section.slider {
    margin-bottom: 250px;
  }
  .swiper-container.swiper-container-initialized.swiper-container-horizontal {
    height: auto;
  }
  .swiper-container-horizontal > .swiper-pagination-bullets,
  .swiper-pagination-custom,
  .swiper-pagination-fraction {
    left: auto;
  }
  .slider .swiper-slide {
    height: auto;
    padding-bottom: 50px;
  }
  .slider .content {
    flex-direction: column-reverse;
    height: auto;
  }
  .slider .content .caption {
    width: 100%;
  }
  .slider .caption h2 {
    font-size: 30px;
  }

  .slider .content .img {
    width: 100%;
  }
}
/*⛔⛔ End Slider ⛔⛔*/

/* 
🌳🌳 Start Booking  🌳🌳 
*/
.booking {
  margin-bottom: 135px;
  position: relative;
}
.booking p,
.booking h2 {
  text-align: center;
}
.booking p {
  color: #3d2514;
  font-family: "Bebas Neue", cursive;
  font-size: 30px;
  letter-spacing: 2px;
}
.booking h2 {
  color: #3d2514;
  font-family: "Alfa Slab One", cursive;
  text-transform: uppercase;
  font-size: 50px;
  letter-spacing: 5px;
  margin-bottom: 50px;
  position: relative;
}
.booking form {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  width: 750px;
  margin: 0 auto;
}
.booking form input {
  width: 350px;
  height: 60px;
  margin: 10px;
  padding: 10px 30px;
  border-radius: 5px;
  border: 1px solid rgba(128, 128, 128, 0.74);
}
.booking form button {
  width: 350px;
  height: 60px;
  margin: 10px;
  padding: 10px 30px;
  border-radius: 5px;
  font-family: "Alfa Slab One", cursive;
  font-size: 20px;
  background: #df1b1c;
  color: white;
  border: none;
}
.booking .wrapper {
  position: relative;
}
.booking .wrapper::before {
  content: url(./assets/images/form/Burger.png);
  position: absolute;
  left: -92px;
  top: -137px;
}
.booking .wrapper::after {
  content: url(./assets/images/form/Image.png);
  position: absolute;
  transform: scale(0.9);
  right: 0;
  top: 239px;
  z-index: -1;
}
.booking::before {
  content: url(./assets/images/form/Bottle.png);
  position: absolute;
  left: 70px;
  top: 130px;
}

/* Responsive Booking */

@media screen and (max-width: 980px) {
  .booking .wrapper::after {
    top: 230px;
  }
  .booking .wrapper::before {
    top: -70px;
    transform: scale(0.8);
  }
}
@media screen and (max-width: 768px) {
  .booking form {
    width: 100%;
  }
  .booking form button,
  .booking form input {
    width: calc(90% / 2);
  }
  .booking h2 {
    font-size: 30px;
  }
  .booking form button {
    font-size: 15px;
  }
}
@media screen and (max-width: 500px) {
  .booking::before {
    top: 95px;
  }
  .booking .wrapper::before {
    top: -125px;
    left: -115px;
  }
  .booking .wrapper::after {
    top: 347px;
  }

  .booking form {
    justify-content: center;
  }
  .booking form button,
  .booking form input {
    width: 90%;
  }
}

/*⛔⛔ End Booking ⛔⛔*/

/* 
🌳🌳 Start Footer  🌳🌳 
*/

footer {
  color: white;
}

footer .wrapper {
  background: url(./assets/images/footer/Layer.jpg);
  width: 94%;
  margin: 0 auto;
  height: 500px;
  padding: 60px 30px 30px 30px;
}
footer .wrapper img {
  height: 75px;
  margin-bottom: 30px;
}
footer .sub-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 150px;
}
footer .sub-wrapper > * {
  width: 450px;
}
footer .sub-wrapper p {
  font-family: "Montserrat", sans-serif;
  font-size: 14px;
  line-height: 30px;
}

footer .contact p {
  font-family: "Bebas Neue", cursive;
  text-transform: uppercase;
  font-size: 20px;
}
/* ... */

